Adding to staff more functionality

--- a/StorageManagement/Views/Products/Create.cshtml
+++ b/StorageManagement/Views/Products/Create.cshtml
@@ -28,20 +28,20 @@
                 <span asp-validation-for="Standart" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ExpiryDate" class="control-label"></label>
+                <label asp-for="ExpiryDate" class="control-label">Expiry date</label>
                 <input asp-for="ExpiryDate" class="form-control" />
                 <span asp-validation-for="ExpiryDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ProductTypeId" class="control-label"></label>
+                <label asp-for="ProductTypeId" class="control-label">Product Type</label>
                 <select asp-for="ProductTypeId" class ="form-control" asp-items="ViewBag.ProductTypeId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="MakerId" class="control-label"></label>
+                <label asp-for="MakerId" class="control-label">Maker</label>
                 <select asp-for="MakerId" class ="form-control" asp-items="ViewBag.MakerId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="StaffId" class="control-label"></label>
+                <label asp-for="StaffId" class="control-label">Staff</label>
                 <select asp-for="StaffId" class ="form-control" asp-items="ViewBag.StaffId"></select>
             </div>
             <div class="form-group">
