--- a/StorageManagement/Views/Makers/Delete.cshtml
+++ b/StorageManagement/Views/Makers/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model DataModels.Staff
+﻿@model DataModels.Maker
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Staff</h4>
+    <h4>Maker</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -18,28 +18,16 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Birthday)
+            @Html.DisplayNameFor(model => model.Country)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Birthday)
+            @Html.DisplayFor(model => model.Country)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AppointedDay)
+            @Html.DisplayNameFor(model => model.Experience)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AppointedDay)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Position)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Position)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FiredDay)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FiredDay)
+            @Html.DisplayFor(model => model.Experience)
         </dd>
     </dl>
     
