--- a/StorageManagement/Views/Staffs/Edit.cshtml
+++ b/StorageManagement/Views/Staffs/Edit.cshtml
@@ -23,9 +23,19 @@
                 <span asp-validation-for="Birthday" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="AppointedDay" class="control-label"></label>
+                <input asp-for="AppointedDay" class="form-control" />
+                <span asp-validation-for="AppointedDay" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Position" class="control-label"></label>
                 <input asp-for="Position" class="form-control" />
                 <span asp-validation-for="Position" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="FiredDay" class="control-label"></label>
+                <input asp-for="FiredDay" class="form-control" />
+                <span asp-validation-for="FiredDay" class="text-danger"></span>
             </div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
