Little changes in views

--- a/StorageManagement/Views/Makers/Delete.cshtml
+++ b/StorageManagement/Views/Makers/Delete.cshtml
@@ -12,19 +12,19 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            Name
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Country)
+            Country
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Country)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Experience)
+            Experience
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Experience)
