--- a/StorageManagement/Views/Products/Delete.cshtml
+++ b/StorageManagement/Views/Products/Delete.cshtml
@@ -12,43 +12,43 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            Name
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Quantity)
+            Quantity
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Quantity)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Standart)
+            Standart
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Standart)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ExpiryDate)
+            Expiry date
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ExpiryDate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductType)
+            Product type
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ProductType.Id)
         </dd class>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Maker)
+            Maker
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Maker.Id)
         </dd class>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Staff)
+            Arranged by staff
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Staff.Id)
