--- a/StorageManagement/Views/Products/Edit.cshtml
+++ b/StorageManagement/Views/Products/Edit.cshtml
@@ -13,37 +13,37 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+                <label>Name</label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Quantity" class="control-label"></label>
+                <label>Quantity</label>
                 <input asp-for="Quantity" class="form-control" />
                 <span asp-validation-for="Quantity" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Standart" class="control-label"></label>
+                <label>Standart</label>
                 <input asp-for="Standart" class="form-control" />
                 <span asp-validation-for="Standart" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ExpiryDate" class="control-label"></label>
+                <label>Expiry date</label>
                 <input asp-for="ExpiryDate" class="form-control" />
                 <span asp-validation-for="ExpiryDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ProductTypeId" class="control-label"></label>
+                <label>Product type</label>
                 <select asp-for="ProductTypeId" class="form-control" asp-items="ViewBag.ProductTypeId"></select>
                 <span asp-validation-for="ProductTypeId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="MakerId" class="control-label"></label>
+                <label>Maker</label>
                 <select asp-for="MakerId" class="form-control" asp-items="ViewBag.MakerId"></select>
                 <span asp-validation-for="MakerId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="StaffId" class="control-label"></label>
+                <label>Arranged by staff</label>
                 <select asp-for="StaffId" class="form-control" asp-items="ViewBag.StaffId"></select>
                 <span asp-validation-for="StaffId" class="text-danger"></span>
             </div>
