--- a/StorageManagement/Views/Makers/Create.cshtml
+++ b/StorageManagement/Views/Makers/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model DataModels.Maker
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Adding";
 }
 
-<h1>Create</h1>
+<h1>Adding new</h1>
 
 <h4>Maker</h4>
 <hr />
@@ -13,17 +13,17 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+                <label>Name</label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Country" class="control-label"></label>
+                <label>Country</label>
                 <input asp-for="Country" class="form-control" />
                 <span asp-validation-for="Country" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Experience" class="control-label"></label>
+                <label>Experience</label>
                 <input asp-for="Experience" class="form-control" />
                 <span asp-validation-for="Experience" class="text-danger"></span>
             </div>
