--- a/StorageManagement/Views/Makers/Index.cshtml
+++ b/StorageManagement/Views/Makers/Index.cshtml
@@ -12,20 +12,20 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <p>
-        <a asp-action="Create">Create New</a>
+        <a asp-action="Create">Add new maker</a>
     </p>
 }
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                Name
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Country)
+                Country
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Experience)
+                Experience
             </th>
             <th></th>
         </tr>
