--- a/StorageManagement/Views/ProductTypes/Create.cshtml
+++ b/StorageManagement/Views/ProductTypes/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model DataModels.ProductType
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Adding type";
 }
 
-<h1>Create</h1>
+<h1>Adding new</h1>
 
 <h4>Product Type</h4>
 <hr />
@@ -13,7 +13,7 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+                <label>Name</label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
