--- a/StorageManagement/Views/Products/Index.cshtml
+++ b/StorageManagement/Views/Products/Index.cshtml
@@ -4,7 +4,7 @@
 @model IEnumerable<DataModels.Product>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Products";
 }
 
 <h1>Products</h1>
@@ -12,32 +12,32 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <p>
-        <a asp-action="Create">Create New</a>
+        <a asp-action="Create">Add new product</a>
     </p>
 }
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                Name
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Quantity)
+                Quantity
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Standart)
+                Standart
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ExpiryDate)
+                Expiry date
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ProductType)
+                Product type
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Maker)
+                Maker
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Staff)
+                Arranged by staff
             </th>
         </tr>
     </thead>
