--- a/StorageManagement/Views/Staffs/Delete.cshtml
+++ b/StorageManagement/Views/Staffs/Delete.cshtml
@@ -12,31 +12,31 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            Name
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Birthday)
+            Birthday
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Birthday)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AppointedDay)
+            Appointed day
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.AppointedDay)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Position)
+            Position
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Position)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FiredDay)
+            Fired day
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.FiredDay)
