--- a/StorageManagement/Views/Staffs/Edit.cshtml
+++ b/StorageManagement/Views/Staffs/Edit.cshtml
@@ -13,27 +13,27 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+                <label>Name</label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Birthday" class="control-label"></label>
+                <label>Birthday</label>
                 <input asp-for="Birthday" class="form-control" />
                 <span asp-validation-for="Birthday" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AppointedDay" class="control-label"></label>
+                <label>Appointed day</label>
                 <input asp-for="AppointedDay" class="form-control" />
                 <span asp-validation-for="AppointedDay" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Position" class="control-label"></label>
+                <label>Position</label>
                 <input asp-for="Position" class="form-control" />
                 <span asp-validation-for="Position" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="FiredDay" class="control-label"></label>
+                <label>FiredDay</label>
                 <input asp-for="FiredDay" class="form-control" />
                 <span asp-validation-for="FiredDay" class="text-danger"></span>
             </div>
